--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,3 +1,4 @@
+<!-- header.component.html -->
 <div class="header-box">
   <app-navbar></app-navbar>
 
@@ -9,23 +10,39 @@
   </div>
 
   <!-- Desktop Nav -->
-  <div class="header-right" *ngIf="!isMobileMenuOpen">
+  <div class="header-right">
     <nav class="header__menu">
       <ul class="menu__list">
-        <li class="dropdown-nav" *ngFor="let group of navGroups">
-          <a href="javascript:void(0)" (click)="toggleDropdown($event)">{{ group.label }}</a>
-          <ul class="dropdown-content-nav">
-            <li *ngFor="let item of group.items">
-                <a
-      [routerLink]="item.route"
-      [queryParams]="item.queryParams"
-      (click)="toggleMobileMenu()"
-    >
-      {{ item.name }}
-    </a>
-            </li>
+        <!-- Destinations Dropdown -->
+        <li class="dropdown-nav">
+          <a href="javascript:void(0)">{{ destinationGroup.label }}</a>
+          <ul class="dropdown-content-nav destinations-dropdown">
+            <ng-container *ngFor="let destination of destinationGroup.destinations">
+              <li class="destination-item" [class.has-locations]="destination.locations.length > 0">
+                <a [routerLink]="destination.route" [queryParams]="destination.queryParams" class="destination-link">
+                  {{ destination.name }}
+                  <span class="arrow-indicator" *ngIf="destination.locations.length > 0">→</span>
+                </a>
+                <ul class="location-submenu" *ngIf="destination.locations.length > 0">
+                  <li *ngFor="let location of destination.locations">
+                    <a [routerLink]="location.route" [queryParams]="location.queryParams" class="location-link">
+                      {{ location.name }}
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ng-container>
           </ul>
         </li>
+
+        <!-- Package Groups -->
+        <ng-container *ngFor="let group of navGroups">
+          <li>
+            <button class="custom-btn nav-btn" [routerLink]="group.items[0].route" [queryParams]="group.items[0].queryParams">
+              {{ group.label }}
+            </button>
+          </li>
+        </ng-container>
       </ul>
       <div class="header__button">
         <button class="custom-btn" (click)="customizeHoliday()" routerLink="/itinerary">Customize My Holiday</button>
@@ -37,18 +54,43 @@
   <div class="mobile-sidebar" [class.open]="isMobileMenuOpen">
     <div class="close-btn" (click)="toggleMobileMenu()">×</div>
     <ul class="mobile-menu">
-      <li *ngFor="let group of navGroups" class="dropdown-mobile">
+      <!-- Mobile Destinations -->
+      <li class="dropdown-mobile">
         <div (click)="toggleDropdown($event)" class="mobile-group-label">
-          {{ group.label }}
+          {{ destinationGroup.label }}
         </div>
         <ul class="mobile-submenu">
-          <li *ngFor="let item of group.items">
-            <a [routerLink]="item.route" (click)="toggleMobileMenu()"> {{ item.name }} </a>
-          </li>
+          <ng-container *ngFor="let destination of destinationGroup.destinations">
+            <li class="mobile-destination-item">
+              <div class="mobile-destination-header" (click)="toggleDestinationLocations($event)">
+                <a [routerLink]="destination.route" [queryParams]="destination.queryParams" (click)="toggleMobileMenu()" class="mobile-destination-link">
+                  {{ destination.name }}
+                </a>
+                <span class="mobile-arrow" *ngIf="destination.locations.length > 0">▼</span>
+              </div>
+              <ul class="mobile-location-list" *ngIf="destination.locations.length > 0">
+                <li *ngFor="let location of destination.locations">
+                  <a [routerLink]="location.route" [queryParams]="location.queryParams" (click)="toggleMobileMenu()" class="mobile-location-link">
+                    {{ location.name }}
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ng-container>
         </ul>
       </li>
+
+      <!-- Mobile Package Groups -->
+      <ng-container *ngFor="let group of navGroups">
+        <li>
+          <button class="custom-btn nav-btn" [routerLink]="group.items[0].route" [queryParams]="group.items[0].queryParams" (click)="toggleMobileMenu()">
+            {{ group.label }}
+          </button>
+        </li>
+      </ng-container>
+
       <li>
-        <button class="custom-btn" (click)="customizeHoliday(); toggleMobileMenu()">Customize My Holiday</button>
+        <button class="custom-btn" (click)="customizeHoliday(); toggleMobileMenu()" routerLink="/itinerary">Customize My Holiday</button>
       </li>
     </ul>
   </div>
