--- a/src/app/components/destinations/destinations.component.scss
+++ b/src/app/components/destinations/destinations.component.scss
@@ -12,7 +12,7 @@
     position: absolute;
     inset: 0; // shorthand for top, right, bottom, left
     // background: url('https://images.pexels.com/photos/1632790/pexels-photo-1632790.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center/cover;
-    background: url('/assets/hero/aurora-sky2.png') no-repeat center center;
+    // background: url('/assets/hero/aurora-sky2.png') no-repeat center center;
     opacity: 0.15;
     background-size: cover;
     filter: blur(3px);
@@ -202,7 +202,7 @@
     left: -100%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+    // background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
     transition: all 0.6s ease;
   }
   
