--- a/src/app/pages/tour-detail/tour-detail.component.html
+++ b/src/app/pages/tour-detail/tour-detail.component.html
@@ -40,7 +40,7 @@
           <div class="booking-details">
             <div class="form-group">
               <label>Date</label>
-              <input type="date" class="form-control" [(ngModel)]="selectedDate" 
+              <input type="date" class="form-control date-year" [(ngModel)]="selectedDate" 
                      [min]="getMinDate()" [max]="getMaxDate()">
             </div>
             
