--- a/src/app/pages/destination-main/destination-main.component.html
+++ b/src/app/pages/destination-main/destination-main.component.html
@@ -233,7 +233,7 @@
   </section>
 
   <!-- 8. Itinerary Timeline -->
-  <section class="section itinerary" >
+  <!-- <section class="section itinerary" >
     <h2>Suggested Itinerary</h2>
     <div class="timeline">
       <div class="timeline-item" *ngFor="let b of destination.itinerary_blocks; let i = index">
@@ -244,7 +244,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- 9. 360° Panorama -->
   <section class="section panorama">
@@ -265,5 +265,5 @@
 <ng-template #loading>
   <p>Loading destination…</p>
 </ng-template>
-
+<app-chat-widget></app-chat-widget>
 <app-footer></app-footer>
