--- a/src/app/common/footer/footer.component.scss
+++ b/src/app/common/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: var(--dark-color);
+  background-color: var(--black-color);
   color: var(--white);
   padding: 60px 0 20px;
 }
@@ -70,6 +70,7 @@
       font-weight: 700;
       background: linear-gradient(135deg, var(--primary-color), var(--gold));
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
     }
   }
