--- a/src/app/components/chat-widget/chat-widget.component.scss
+++ b/src/app/components/chat-widget/chat-widget.component.scss
@@ -6,9 +6,10 @@
   }
   
   .chat-button {
+ color: var(--black-color);
     width: 60px;
     height: 60px;
-    background: linear-gradient(135deg, var(--dark-pink), var(--secondary-color));
+    background: linear-gradient(135deg, var(--dark-pink) , var(--secondary-color));
     border-radius: 50%;
     display: flex;
     align-items: center;
