--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,21 +1,49 @@
 <section class="map" id="map">
-    <div class="container">
-      <div class="section-title text-center">
-        <h2>Visit Us in Kolkata</h2>
-        <p>Find our office on Sector 1, the heart of Kolkata</p>
-      </div>
+  <div class="container">
+    <div class="section-title text-center">
+      <h2>Visit Us in Kolkata</h2>
+      <p>Find our office on Sector 1, the heart of Kolkata</p>
+    </div>
+
+    <div class="contact-container">
       <div class="map-container" data-aos="fade-up">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.6226618969345!2d88.40438357440232!3d22.593212032216254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275e3ed159a03%3A0x46ba6e70d1331cdb!2sSunflower%20Trip%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1746509925448!5m2!1sen!2sin"
-         width="100%" height="450" style="border:0;" allowfullscreen=""
-          loading="lazy"></iframe>
-        <!-- <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.6734040156877!2d88.3518063150515!3d22.55311898519229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277a7a7a7a7a7%3A0x7a7a7a7a7a7a7a7a!2sPark%20Street%2C%20Kolkata%2C%20West%20Bengal%20700016%2C%20India!5e0!3m2!1sen!2sin!4v1634567890123!5m2!1sen!2sin"
-          width="100%"
-          height="450"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy">
-        </iframe> -->
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.6226618969345!2d88.40438357440232!3d22.593212032216254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275e3ed159a03%3A0x46ba6e70d1331cdb!2sSunflower%20Trip%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1746509925448!5m2!1sen!2sin"
+          loading="lazy"
+          allowfullscreen>
+        </iframe>
+      </div>
+
+      <div class="contact-info" data-aos="fade-up">
+        <h3>Get in Touch</h3>
+        <ul class="info-list">
+          <li>
+            <i class="fas fa-map-marker-alt"></i>
+            <span>BD 230, Sector 1, Kolkata, West Bengal 700064</span>
+          </li>
+          <li>
+            <i class="fas fa-phone-alt"></i>
+            <a href="tel:+918981663005">+91 8981663005</a><br />
+            <a href="tel:+913335474551">+91 33 3547 4551</a>
+          </li>
+          <li>
+            <i class="fas fa-envelope"></i>
+            <a href="mailto:info@thesunflowertrip.com">info&#64;thesunflowertrip.com</a><br />
+            <a href="mailto:bookings@thesunflowertrip.com">bookings&#64;thesunflowertrip.com</a>
+          </li>
+          <li>
+            <i class="fas fa-clock"></i>
+            <span>Mon–Fri: 10:00 AM - 6:00 PM<br />Sat: 10:00 AM - 2:00 PM<br />Sunday: Closed</span>
+          </li>
+        </ul>
+
+        <div class="social-links">
+          <a href="https://facebook.com/sunflowertrip" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://instagram.com/tripsunflower" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://wa.me/918981663005" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://youtube.com/sunflowertrip" target="_blank"><i class="fab fa-youtube"></i></a>
+        </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
